--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         "uploadKey": "upfile",
 		"uploadProgress": "#progress",
 		"uploadFailed":function(e){
-			console.log(e)
+			//console.log(e)
 		}
 	})
 	
