分片上传主体部分已完成,剩下进度展示部分

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </body>
 <script type="text/javascript">
 	$("#testUpload").upload({
-		"uploadUrl": "php/controller.php?action=uploadimage",
+		"uploadUrl": "php/controller.php?action=uploadfile",
         "uploadKey": "upfile",
 		"uploadProgress": "#progress",
 		"uploadFailed":function(e){
