--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
 <script type="text/javascript" src="./jquery.js"></script>
-<script type="text/javascript" src="。/bootstrap.js"></script>
+<script type="text/javascript" src="./dist/js/bootstrap.js"></script>
 <link type="text/css" href="./bootstrap.css" rel="stylesheet">
 <link type="text/css" href="./AdminLTE.css" rel="stylesheet">
 </head>
